--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -28,8 +28,9 @@ yarn-error.log*
 lerna-debug.log*
 
 # Image uploads
-uploads/*
-!uploads/.gitkeep
+#uploads/*
+!uploads/products/*
+!uploads/stores/*
 
 # Coverage directory used by tools like istanbul
 coverage
